# strata

./: .gitignore  LICENSE  REQUIREMENTS.md
apps/: Cargo.toml
apps/admin/: index.html  package-lock.json  package.json  vite.config.ts
apps/admin/src/: App.css  App.tsx  index.css  main.tsx  routeTree.gen.ts  router.tsx
apps/admin/src/api/: auth.ts  client.ts  session.ts  types.ts
apps/admin/src/application/: admin-shell.ts
apps/admin/src/components/: admin-layout.tsx  admin-page.tsx  admin-shell.tsx  (+5 more)
apps/api/: .env.example  README.md  alembic.ini  auth.py  database.py  main.py  pyproject.toml  storage.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 072db20cb7b3_initial_schema.py
apps/api/application/: __init__.py  collections.py  compliance.py  imports.py  installments.py  notifications.py  payments.py  residences.py  residents.py  shared.py
apps/api/models/: __init__.py  schemas.py
apps/api/models/db/: __init__.py  compliance.py  enums.py  finance.py  imports.py  installment.py  operations.py  residence.py
apps/api/routes/: __init__.py  admin.py  admin_common.py  admin_imports.py  admin_residence_management.py  admin_residents.py  auth.py  resident.py
apps/api/scripts/: bootstrap_admin.py
apps/api/tests/: test_admin_residents.py  test_auth.py  test_resident_payments.py
docs/: finance_model.dbml
docs/api/: 00-overview.md  01-health.md  02-authentication.md  03-admin-residences.md  04-admin-blocks.md  05-admin-units.md  06-admin-resident-management.md  07-admin-imports.md  08-resident-portal.md  README.md
infra/: stack.yml
(+49 files in other folders)
