[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.40.58",
    "fastapi>=0.136.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.13.3",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
